# zikr-reminder

./: README.md  index.html  package.json
.github/workflows/: arm.yml  build.yml
src/: App.tsx  notifications.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
